--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.0.1",
+    "@types/cli-progress": "^3.11.5",
     "@types/figlet": "^1.5.8",
+    "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
     "commander-ts": "^0.2.0",
     "dotenv": "^16.4.5",
     "figlet": "^1.7.0",
+    "got": "^14.2.1",
+    "ky": "^1.2.4",
     "p-limit": "^5.0.0",
     "xior": "^0.4.3"
   }
