--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "type": "module",
   "main": "./megaverse.js",
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/node": "^20.12.11",
+    "eslint": "^8.53.0",
     "gts": "^5.3.0",
+    "prettier": "3.2.5",
     "typescript": "^5.4.5"
   },
   "scripts": {
@@ -27,9 +30,7 @@
     "commander-ts": "^0.2.0",
     "dotenv": "^16.4.5",
     "figlet": "^1.7.0",
-    "got": "^14.2.1",
     "ky": "^1.2.4",
-    "p-limit": "^5.0.0",
-    "xior": "^0.4.3"
+    "p-limit": "^5.0.0"
   }
 }
