--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "cm-megaverse",
   "type": "module",
-  "main": "./megaverse.js",
+  "main": "./src/index.ts",
   "devDependencies": {
     "@eslint/js": "^9.3.0",
+    "@types/jest": "^29.5.12",
+    "@types/nock": "^11.1.0",
     "@types/node": "^20.12.11",
     "eslint": "^8.53.0",
     "gts": "^5.3.0",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "nock": "^13.5.4",
     "prettier": "3.2.5",
+    "ts-jest": "^29.1.3",
     "typescript": "^5.4.5"
   },
   "scripts": {
+    "test": "bun test",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -19,7 +26,7 @@
     "pretest": "npm run compile",
     "posttest": "npm run lint",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "create-executable": "bun build ./src/index.ts --compile --outfile ./megaverse"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.0.1",
