--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,16 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
-    "module": "ESNext",
+    "target": "ES2020",                               
+    "module": "commonjs",
     "moduleResolution": "node",
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
+
+
