update README, refactor code, ...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "dist",
     "strict": true,
     "target": "ES2020",                               
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
+    //"noEmit": true,
+    //"allowImportingTsExtensions": true,
     "sourceMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
-
-
