--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cm-megaverse",
   "type": "module",
   "main": "./src/index.ts",
+  "jest": {
+    "setupFilesAfterEnv": ["./testSetup.js"]
+  },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/jest": "^29.5.12",
@@ -10,6 +13,7 @@
     "eslint": "^8.53.0",
     "gts": "^5.3.0",
     "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
     "jest-fetch-mock": "^3.0.3",
     "nock": "^13.5.4",
     "prettier": "3.2.5",
@@ -26,7 +30,7 @@
     "pretest": "npm run compile",
     "posttest": "npm run lint",
     "build": "npx tsc",
-    "create-executable": "bun build ./src/index.ts --compile --outfile ./megaverse"
+    "create-executable-mac": "bun build ./src/index.ts --compile --outfile ./megaverse-mac"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.0.1",
@@ -40,4 +44,5 @@
     "ky": "^1.2.4",
     "p-limit": "^5.0.0"
   }
+  
 }
